--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "formik": "^2.4.5",
     "next": "14.0.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.5"
+    "tailwindcss": "3.3.5",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "20.10.2",
